Subdivision: GPU Subdivision shows corrupt geometry on high polycount objects #94881

Closed
opened 2022-01-13 15:06:21 +01:00 by Garek · 12 comments

System Information
Operating system: Windows-10-10.0.19044-SP0 64 Bits
Graphics card: AMD Radeon HD 7800 Series ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.20903.8001

Blender Version
Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-11 23:26, hash: ef5d01d98f
Worked: never

Short description of error
When mesh have high polycount GPU Subdivision option shows corrupt geometry (lost, mangled geometry etc.). Generally objects with loose geometry will trigger issue easier. When using Simple type instead of Catmull-Clark issue does not shown but increasing polycount by subdividing in edit mode will trigger it again.
Also note that using mesh with less polycount but higher subdivision surface modifier level will not show issue even when resulting polycount is higher.

Exact steps for others to reproduce the error

  1. Open attached file. There is subdivided cube with loose geometry (8 times subdivided only loose geometry), cube (8 times) and Suzanne (5 times).
  2. Make sure GPU Subdivision is checked in preferences
  3. Add Subdivision Surface modifier to any object.
  4. Uncheck GPU Subdivision in preferences to see correct mesh.
    GPU subdivision corruption.blend
**System Information** Operating system: Windows-10-10.0.19044-SP0 64 Bits Graphics card: AMD Radeon HD 7800 Series ATI Technologies Inc. 4.5.14831 Core Profile Context 21.5.2 27.20.20903.8001 **Blender Version** Broken: version: 3.1.0 Alpha, branch: master, commit date: 2022-01-11 23:26, hash: `ef5d01d98f` Worked: never **Short description of error** When mesh have high polycount `GPU Subdivision` option shows corrupt geometry (lost, mangled geometry etc.). Generally objects with loose geometry will trigger issue easier. When using `Simple` type instead of `Catmull-Clark` issue does not shown but increasing polycount by subdividing in edit mode will trigger it again. Also note that using mesh with less polycount but higher subdivision surface modifier level will not show issue even when resulting polycount is higher. **Exact steps for others to reproduce the error** 1. Open attached file. There is subdivided cube with loose geometry (8 times subdivided only loose geometry), cube (8 times) and Suzanne (5 times). 2. Make sure `GPU Subdivision` is checked in preferences 3. Add `Subdivision Surface` modifier to any object. 5. Uncheck `GPU Subdivision` in preferences to see correct mesh. [GPU subdivision corruption.blend](https://archive.blender.org/developer/F12803761/GPU_subdivision_corruption.blend)
Author

Added subscriber: @Garek

Added subscriber: @Garek
Author

Will not confirm myself on the off chance it's some driver/GPU issue or something.

Will not confirm myself on the off chance it's some driver/GPU issue or something.
Garek changed title from Subdivision: to Subdivision: GPU Subdivision shows corrupt geometry on high polycount objects 2022-01-13 15:10:04 +01:00
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123

Added subscribers: @Jeroen-Bakker, @kevindietrich

Added subscribers: @Jeroen-Bakker, @kevindietrich

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

Changed status from 'Needs Triage' to: 'Needs Developer To Reproduce'

I cannot reproduce (using an NVidia card). @Jeroen-Bakker can you try to reproduce this on an AMD card, please?

I cannot reproduce (using an NVidia card). @Jeroen-Bakker can you try to reproduce this on an AMD card, please?
Author

I experimented with Advanced options of modifier later at the time and was convinced it's same bug but apparently unchecking Use Limit Surface is separate bug that triggers on geometry even with low polycount. I mistaken them since this bug sometimes collapses geometry too. I filed a separate bugreport #94936.
To note: with this bug when geometry disappears viewport doesn't lag as if there is no geometry at all (it takes me dozens of seconds to add modifier).

I experimented with Advanced options of modifier later at the time and was convinced it's same bug but apparently unchecking Use Limit Surface is separate bug that triggers on geometry even with low polycount. I mistaken them since this bug sometimes collapses geometry too. I filed a separate bugreport #94936. To note: with this bug when geometry disappears viewport doesn't lag as if there is no geometry at all (it takes me dozens of seconds to add modifier).
Author

Also another note: it's possible issue shown only with loose geometry such as Suzanne (but not always), deleting eyes for her didn't trigger issue. All other cases without loose geometry that I tested but later deleted (don't want to upload 200+ mb file) maybe just #94936.

Also another note: it's possible issue shown only with loose geometry such as Suzanne (but not always), deleting eyes for her didn't trigger issue. All other cases without loose geometry that I tested but later deleted (don't want to upload 200+ mb file) maybe just #94936.

Added subscriber: @deadpin

Added subscriber: @deadpin

I also cannot reproduce when using a 1070 nVidia card. However, a very old AMD FirePro W2100 shows what's been demonstrated here so perhaps is related to AMD (or at least the older ones).

I also cannot reproduce when using a 1070 nVidia card. However, a very old AMD FirePro W2100 shows what's been demonstrated here so perhaps is related to AMD (or at least the older ones).

This issue was referenced by c5dcfb63d9

This issue was referenced by c5dcfb63d9e40138f03c135346bfa779abcb0e58

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'

Changed status from 'Needs Developer To Reproduce' to: 'Resolved'
Kévin Dietrich self-assigned this 2022-02-17 13:14:40 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#94881
No description provided.